--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "dotenv": "^16.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
